prep for jenkins build